package main.observer;

public interface WorkoutObserver {
    void update(String workoutEntry);
}
